--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -13,9 +13,9 @@
         }
 
         header {
-            background-color: #2c3e50;
+            background-color: #046A38;
             color: white;
-            padding: 2rem 1rem;
+            padding: 0.5rem 1rem;
             text-align: center;
         }
 
@@ -65,6 +65,7 @@
 <header>
     <h1>Amith Koneru</h1>
     <p>Computer Science Graduate | AI & Robotics Concentration</p>
+    <p> Contact: amithkoneru@gmail.com</p>
 </header>
 
 <section class="section">
@@ -117,6 +118,11 @@
     <div class="item">
         <div class="item-title">
             <a href="https://github.com/amithkoneru" target="_blank">GitHub</a>
+        </div>
+    </div>
+    <div class="item">
+        <div class="item-title">
+            <a href="https://www.linkedin.com/in/amith-s-koneru/" target="_blank">LinkedIn</a>
         </div>
     </div>
 </section>
