--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -71,7 +71,7 @@
 <section class="section">
     <h2>Experience</h2>
     <div class="item">
-        <div class="item-title">Community Tech Support Lead</div>
+        <div class="item-title">Community Technical Support Lead</div>
         <div class="item-subtitle">Discord Server | 10/2020 – Present</div>
         <div class="item-description">
             Established and actively managed a dedicated technical support channel on Discord, assisting 63+ members. Delivered comprehensive hardware, software, and networking support via text & voice. Authored 1098+ support messages.
